# LinearSolver

./: CMakeLists.txt  LinearSolver.sln  README.md  premake5.lua
LinearSolver/: CMakeLists.txt  LinearSolver.vcxproj  LinearSolver.vcxproj.filters
LinearSolver/src/: Constants.h  DataGenration.h  LinearSolver.h  LinearSolverPara.h  MatFormat.h  Typedef.h  main.cu
LinearSolver/src/BiCGSTAB/Parallel/: BiCGSTAB_DeviceUtils.h  P_BiCGSTAB.h
LinearSolver/src/BiCGSTAB/Sequence/: S_BICGSTAB.h
LinearSolver/src/CG/Parallel/: CG_DeviceUtils.h  P_CG.h
LinearSolver/src/CG/Sequence/: S_CG.h
LinearSolver/src/Utils/: DeviceUtils.h  HostUtils.h
LinearSolver/src/tools/: BenchMark.h  TimerClock.cpp  TimerClock.h
